# agenthub

./: .env.example  .gitignore  ARCHITECTURE.md  DELIVERABLES.md  Dockerfile  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  P0_IMPROVEMENTS.md  P0_VERIFICATION.md  README.md  SHIP_IT.md  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: AGENT_SESSION_LIFECYCLE.md
infra/grafana/dashboards/: agenthub_overview.json
infra/otel/: otel-collector-config.yml
infra/prometheus/: prometheus.yml
perf/: RESULTS.md  load_test.js
scripts/: demo_governance.sh
src/agenthub/: __init__.py  __main__.py  app.py  config.py  deps.py  server.py
src/agenthub/api/: routes.py
src/agenthub/api/v1/: admin.py  execute.py  plan.py  sessions.py  stream.py  tools.py
src/agenthub/auth/: __init__.py  api_keys.py  rbac.py
src/agenthub/consumers/: __init__.py  audit_consumer.py  dlq_consumer.py
src/agenthub/executor/: __init__.py  executor.py
src/agenthub/governance/: __init__.py  audit.py  idempotency.py  masking.py  rate_limiter.py  token_meter.py
src/agenthub/models/: __init__.py  errors.py  events.py  schemas.py
src/agenthub/observability/: __init__.py  logging.py  metrics.py  otel.py
src/agenthub/planner/: __init__.py  planner.py
src/agenthub/providers/: __init__.py  llm.py  vectorstore.py
src/agenthub/store/: __init__.py  cache.py  sessions.py
src/agenthub/tools/: __init__.py  base.py  builtin_ads_metrics_mock.py  builtin_http.py  builtin_retrieve_doc.py  builtin_search.py  registry.py
tests/: conftest.py  test_auth.py  test_circuit_breaker.py  test_end_to_end.py  test_executor.py  test_idempotency_concurrency.py  test_masking.py  test_planner.py  test_rate_limit.py  test_rate_limit_headers.py  test_sse_heartbeat.py  test_streaming.py  test_tenant_budget.py  test_token_meter.py
