[project]
name = "agenthub"
version = "0.1.0"
description = "Production-ready agentic orchestrator with governance, observability, and streaming"
authors = [
    {name = "AgentHub Team", email = "team@agenthub.io"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "redis==5.0.1",
    "kafka-python==2.0.2",
    "openai==1.3.7",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-exporter-otlp==1.21.0",
    "prometheus-client==0.19.0",
    "httpx==0.25.2",
    "python-multipart==0.0.6",
    "sse-starlette==1.8.2",
    "cryptography==41.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-timeout==2.2.0",
    "black==23.11.0",
    "ruff==0.1.6",
    "mypy==1.7.1",
    "types-redis==4.6.0.11",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/agenthub --cov-report=term-missing --cov-report=html --timeout=30"

[tool.coverage.run]
source = ["src/agenthub"]
omit = ["*/tests/*", "*/conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

